# RusTracer

./: Cargo.toml  README.md
benches/: benchmark.rs
scenes/: ch09.yml  ch10.yml  ch11_reflection.yml  ch11_refraction.yml  ch12_cube.yml  cha10.yml  cover.yml  test.yml
src/: camera.rs  canvas.rs  color.rs  error.rs  lib.rs  main.rs  matrix.rs  minifb_als.rs  pattern.rs  ppm.rs  ray.rs  reflection.rs  refraction.rs  shape.rs  transformation.rs  tuple.rs  utils.rs  world.rs
src/drivers/: mod.rs
src/io/: yaml.rs
src/shape/: mod.rs  object.rs  plane.rs  shape.rs  sphere.rs
