[package]
name = "rustracer"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# on ubuntu linux we may need to point the path of xkbcommon.pc to pkgconfig
# $ PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig cargo build 
# TODO do a build.rs file


[dependencies]
minifb = "0.20"
serde = "1.0.133"
indicatif = "0.17.8"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
debug = false